# libstreamanalyzer

lib/pdf/: CMakeLists.txt  array.cpp  array.h  basicparsers.cpp  basicparsers.h  dictionary.cpp  dictionary.h  document.cpp  document.h  footer.cpp  footer.h  grammar.cpp  grammar.h  indirectobject.cpp  indirectobject.h  name.cpp  name.h  number.cpp  number.h  object.cpp  object.h  parser.cpp  parser.h  pdf.cpp  pdfparser.cpp  pdfparser.h  pdftext.cpp  pdftext.h  reference.cpp  reference.h  stream.cpp  stream.h  streamwrapper.cpp  streamwrapper.h  string.cpp  string.h  xreftable.cpp  xreftable.h
